# Mechinterp-Model

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: inference.py  lasso.py  main.py  model.py  plot_ablations.py
src/mechinterp_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/train/: create_dataset.py  test_model.py  train_model.py  train_tokenizer.py
src/utils/: __init__.py  dataset.py  dir.py  parser.py
